--- a/partials/_layouts.scss
+++ b/partials/_layouts.scss
@@ -14,7 +14,7 @@
   display: block;
   position: absolute;
   background-image: linear-gradient(to bottom, rgba(6, 18, 30, 0.1), #06121e),
-    url("../assets/bg.svg");
+    url("https://github.com/maxeinstein-dev/BarberShop/blob/main/assets/bg.svg");
   left: 0;
   top: 0;
   width: 100%;
